<resources>
    <string name="app_name">Database Implementation New</string>
    <string name="welcome_to_the_application">Welcome to the application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_name_please">Enter your name please</string>
    <string name="name">Name:-</string>
    <string name="enter_the_details">Enter the details</string>
    <string name="age">Age:-</string>
    <string name="enter_your_age_please">Enter your age please</string>
    <string name="dob">DOB:-</string>
    <string name="enter_your_dob_please">Enter your DOB please</string>
    <string name="submit_here">Submit here</string>
    <string name="enter_the_info_in_which_you_want_the_list">Enter the info in which you want the list</string>
</resources>